--- a/public/data/projects.json
+++ b/public/data/projects.json
@@ -1,27 +1,100 @@
 {
   "projects": [
     {
+      "id": "cmiftnlgd0000l809czjbkrdy",
+      "title": "Anil - Sunbrix",
+      "location": "Bellary",
+      "year": "2022",
+      "plotSize": "6000 sq.ft",
+      "facing": "North",
+      "propertyType": "Residential",
+      "image": "https://rzkmikgqpkblsjbrmnkw.supabase.co/storage/v1/object/public/project-images/anil---sunbrix/PHOTO-2023-01-10-19-43-32-1764180666826-n1h3zb76ca8.webp",
+      "images": [
+        "https://rzkmikgqpkblsjbrmnkw.supabase.co/storage/v1/object/public/project-images/anil---sunbrix/PHOTO-2023-01-10-19-43-32-1764180666826-n1h3zb76ca8.webp",
+        "https://rzkmikgqpkblsjbrmnkw.supabase.co/storage/v1/object/public/project-images/anil---sunbrix/PHOTO-2023-01-10-19-43-24-1764180625297-1omqh2hww5k.webp",
+        "https://rzkmikgqpkblsjbrmnkw.supabase.co/storage/v1/object/public/project-images/anil---sunbrix/PHOTO-2025-07-06-16-40-50-1764180698121-2le0ut04g1m.webp"
+      ],
+      "image_alt_texts": [
+        "Anil House",
+        "Anil House 2",
+        "Anil House Brick Phase"
+      ],
+      "description": "A contemporary residential building crafted with clean geometry, bright open spaces and a strong structural base. The design combines modern aesthetics with solid construction quality, visible from the early stages to the final elevation.",
+      "specifications": {
+        "bedrooms": "5"
+      },
+      "active": true,
+      "created_at": "2025-11-26T09:48:13.354Z",
+      "updated_at": "2025-11-26T18:11:41.944Z"
+    },
+    {
+      "id": "cmift4r3r0000jo09uv9k4wqu",
+      "title": "Ravishankar - Sunbrix",
+      "location": "Bengaluru",
+      "year": "2015",
+      "plotSize": "2600 Sq.ft",
+      "facing": "North",
+      "propertyType": "Residential",
+      "image": "https://rzkmikgqpkblsjbrmnkw.supabase.co/storage/v1/object/public/project-images/ravishankar---sunbrix/Ravishankar%20-%20Sunbrix-1764180190693-picvnwwywn.webp",
+      "images": [
+        "https://rzkmikgqpkblsjbrmnkw.supabase.co/storage/v1/object/public/project-images/ravishankar---sunbrix/Ravishankar%20-%20Sunbrix-1764180190693-picvnwwywn.webp"
+      ],
+      "image_alt_texts": [
+        "Ravishankar-Sunbrix"
+      ],
+      "description": "Built with a simple, solid design and a low-maintenance approach as desired by the customer, this home features open balconies and clean forms that keep it bright and airy.",
+      "specifications": {
+        "bedrooms": "4"
+      },
+      "active": true,
+      "created_at": "2025-11-26T09:33:35.415Z",
+      "updated_at": "2025-11-26T18:03:19.134Z"
+    },
+    {
+      "id": "cmigbgv930000os6w7utl9kh8",
+      "title": "Vinay",
+      "location": "Bengaluru",
+      "year": "2023",
+      "plotSize": "1200 sq ft",
+      "facing": "North",
+      "propertyType": "Residential",
+      "image": "https://rzkmikgqpkblsjbrmnkw.supabase.co/storage/v1/object/public/project-images/vinay/IMG_1255-1764180409328-iaxv5wu0pp.png",
+      "images": [
+        "https://rzkmikgqpkblsjbrmnkw.supabase.co/storage/v1/object/public/project-images/vinay/IMG_1255-1764180409328-iaxv5wu0pp.png"
+      ],
+      "image_alt_texts": [
+        "Vinay house"
+      ],
+      "description": "text here",
+      "specifications": {
+        "bedrooms": "4"
+      },
+      "active": true,
+      "created_at": "2025-11-26T18:06:53.718Z",
+      "updated_at": "2025-11-26T18:06:53.718Z"
+    },
+    {
       "id": "cmiewvay90000l809p3iqqxse",
-      "title": "Chandrashekar House",
+      "title": "Chandrashekar - Sunbrix",
       "location": "Bengaluru",
       "year": "2024",
       "plotSize": "3125 Sq.ft",
       "facing": "North",
       "propertyType": "Mixed Use",
-      "image": "https://rzkmikgqpkblsjbrmnkw.supabase.co/storage/v1/object/public/project-images/chandrashekar-house/IMG_0640-1764095418845-adl3uh0hwx.webp",
+      "image": "https://rzkmikgqpkblsjbrmnkw.supabase.co/storage/v1/object/public/project-images/chandrashekar---sunbrix/Chandrashekar%20Final-1764144360740-51452huq9ca.webp",
       "images": [
-        "https://rzkmikgqpkblsjbrmnkw.supabase.co/storage/v1/object/public/project-images/chandrashekar-house/IMG_0640-1764095418845-adl3uh0hwx.webp"
+        "https://rzkmikgqpkblsjbrmnkw.supabase.co/storage/v1/object/public/project-images/chandrashekar---sunbrix/Chandrashekar%20Final-1764144360740-51452huq9ca.webp"
       ],
       "image_alt_texts": [
-        "Rental house"
+        "Chandrashekar - Sunbrix"
       ],
-      "description": "To obtain maximum rental yield ",
+      "description": "A contemporary and symmetrical home that elevates its surroundings, with a design that highlights every corner. Its modern appeal has helped achieve a rental yield nearly 35% higher than the average in the locality.",
       "specifications": {
         "bedrooms": "9"
       },
       "active": true,
       "created_at": "2025-11-25T18:30:26.866Z",
-      "updated_at": "2025-11-25T18:32:21.129Z"
+      "updated_at": "2025-11-26T08:14:20.597Z"
     },
     {
       "id": "cmi1z0tic00f2os94gdkb1cke",
@@ -48,7 +121,7 @@
     },
     {
       "id": "cmi1z0tro00f4os94d8ccaf8x",
-      "title": "Kiran Hulla Sunbrix",
+      "title": "Kiran Holla - Sunbrix",
       "location": "Bengaluru",
       "year": "2010",
       "plotSize": "4800 sq.ft",
@@ -59,7 +132,7 @@
         "https://rzkmikgqpkblsjbrmnkw.supabase.co/storage/v1/object/public/project-images/kiran-holla/Kiran%20Holla%20House-1758470134866-f3q68wfqgk5.png"
       ],
       "image_alt_texts": [
-        "Kiran Hulla House | Sunbrix Constructions"
+        "Kiran Holla House | Sunbrix Constructions"
       ],
       "description": "Elegance, presence and a home that stands out. Defined by clean architecture, thoughtful design, and premium materials this 2010 built bungalow continues to embody simplicity and enduring appeal.",
       "specifications": {
@@ -67,7 +140,7 @@
       },
       "active": true,
       "created_at": "2025-11-16T17:09:43.141Z",
-      "updated_at": "2025-11-25T18:32:21.920Z"
+      "updated_at": "2025-11-26T09:12:23.998Z"
     },
     {
       "id": "cmi8yd11h0000ks09tk05t5bo",
@@ -76,25 +149,25 @@
       "year": "2010",
       "plotSize": "21976 Sq.ft",
       "facing": "West",
-      "propertyType": "Residential",
+      "propertyType": "Educational",
       "image": "https://rzkmikgqpkblsjbrmnkw.supabase.co/storage/v1/object/public/project-images/lakshmiah-shetty-x-sridhar-gupta/laksmai-shetty-1764094507828-cvmv1jpypa.webp",
       "images": [
         "https://rzkmikgqpkblsjbrmnkw.supabase.co/storage/v1/object/public/project-images/lakshmiah-shetty-x-sridhar-gupta/laksmai-shetty-1764094507828-cvmv1jpypa.webp"
       ],
       "image_alt_texts": [
-        "rear"
+        "Sridhar Gupta - Sunbrix"
       ],
-      "description": "This is an apartment constructed for our client",
+      "description": "Lt Mr. Lakshmiah Shetty entrusted us with this project coordinated by Mr. Sridhar Gupta. We built the original structure when it was planned as a school. The apartment that stands today was completed later through a joint venture, not by Sunbrix. The evolution of this building reflects the thoughtful planning and strong foundation we delivered at the start.",
       "specifications": {
         "bedrooms": "40"
       },
       "active": true,
       "created_at": "2025-11-21T14:25:36.390Z",
-      "updated_at": "2025-11-25T18:32:22.316Z"
+      "updated_at": "2025-11-26T10:15:13.794Z"
     },
     {
       "id": "cmi8uttm90000jt09iksnzsoj",
-      "title": "Narayana Ramiah City",
+      "title": "Kumar - Sunbrix",
       "location": "Bengaluru",
       "year": "2022",
       "plotSize": "4400 Sq.ft",
@@ -105,23 +178,23 @@
         "https://rzkmikgqpkblsjbrmnkw.supabase.co/storage/v1/object/public/project-images/temp-1763728960318/Narayana%20Ramiah-1763729159844-7mv4qd5fcb9.webp"
       ],
       "image_alt_texts": [
-        "Front Elevation - Sunbrix"
+        "Kumar - Sunbrix"
       ],
-      "description": "Shop and houses",
+      "description": "This project was designed to maximise rental yield, featuring cluster efficient layout along with a retail store for added income and utility.",
       "specifications": {
         "bedrooms": "9"
       },
       "active": true,
       "created_at": "2025-11-21T12:46:41.458Z",
-      "updated_at": "2025-11-25T18:32:22.711Z"
+      "updated_at": "2025-11-26T08:21:50.322Z"
     },
     {
       "id": "cmi8tqyvd0002l509docallnb",
-      "title": "House",
+      "title": "Kumar - Sunbrix",
       "location": "Bengaluru",
-      "year": "2012",
-      "plotSize": "Details to be filled",
-      "facing": "North",
+      "year": "2015",
+      "plotSize": "3640 Sq.ft",
+      "facing": "South-West",
       "propertyType": "Residential",
       "image": "https://rzkmikgqpkblsjbrmnkw.supabase.co/storage/v1/object/public/project-images/house/IMG_0313-min-1764094538497-zfpt1nradgr.webp",
       "images": [
@@ -129,16 +202,16 @@
         "https://rzkmikgqpkblsjbrmnkw.supabase.co/storage/v1/object/public/project-images/details-to-be-filled/Kumar-min-1763727176369-wm6d398iq6e.jpg"
       ],
       "image_alt_texts": [
-        "Rear View",
-        "front"
+        "Kumar Front View - Sunbrix",
+        "Kumar Rear View - Sunbrix"
       ],
-      "description": "Details to be filled after upload",
+      "description": "This south-west corner property features a well balanced elevation with clean lines and warm earthy tones. It is designed for both function and aesthetics, with dedicated parking included.",
       "specifications": {
-        "bedrooms": "4"
+        "bedrooms": "7"
       },
       "active": true,
       "created_at": "2025-11-21T12:16:28.484Z",
-      "updated_at": "2025-11-25T18:32:23.106Z"
+      "updated_at": "2025-11-26T09:10:25.847Z"
     },
     {
       "id": "cmi20lddt0000l209dd6a1hwb",
@@ -165,7 +238,7 @@
     },
     {
       "id": "cmi8ukh8c0000l109w7aa3fyz",
-      "title": "Vinutha House - Sunbrix",
+      "title": "Vinutha - Sunbrix",
       "location": "Bengaluru",
       "year": "2021",
       "plotSize": "3125 Sq.ft",
@@ -176,15 +249,15 @@
         "https://rzkmikgqpkblsjbrmnkw.supabase.co/storage/v1/object/public/project-images/temp-1763728203431/Vinutha-1763728691855-ionv8kftjja.webp"
       ],
       "image_alt_texts": [
-        "Vinutha House - Sunbrix"
+        "Vinutha - Sunbrix"
       ],
-      "description": "Vinutha story of a stranger turned to family",
+      "description": "A simple duplex home with a rental unit on the ground floor, designed for simplicity while ensuring maximum use of space, with great ventilation and natural light in every corner.",
       "specifications": {
-        "bedrooms": "3"
+        "bedrooms": "4"
       },
       "active": true,
       "created_at": "2025-11-21T12:39:25.501Z",
-      "updated_at": "2025-11-25T18:32:23.896Z"
+      "updated_at": "2025-11-26T09:00:59.402Z"
     },
     {
       "id": "cmi1z0twj00f5os94x5z93f4f",
@@ -224,14 +297,14 @@
       "image_alt_texts": [
         "Anuj & Manoj Lunia's house - Built by Sunbrix"
       ],
-      "description": "First house built by Sunbrix, however the house hasn't been painted ever since",
+      "description": "Built by Sunbrix in 2005, this home has never been repainted since completion. It stands as a real example of our low maintenance, sustainable and durable construction approach.",
       "specifications": {
         "bedrooms": "6"
       },
       "active": true,
       "created_at": "2025-11-16T17:09:43.141Z",
-      "updated_at": "2025-11-25T18:32:24.686Z"
+      "updated_at": "2025-11-26T10:12:43.789Z"
     }
   ],
-  "count": 10
+  "count": 13
 }
