--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "@types/react": "^19",
     "@types/react-dom": "^19",
     "autoprefixer": "^10.4.20",
+    "critters": "^0.0.23",
     "dompurify": "^3.2.6",
     "dotenv": "^16.5.0",
     "eslint": "^9",
