--- a/public/data/projects.json
+++ b/public/data/projects.json
@@ -52,10 +52,10 @@
     },
     {
       "id": "cmigbgv930000os6w7utl9kh8",
-      "title": "Vinay",
+      "title": "Vinay & Narayana - Sunbrix",
       "location": "Bengaluru",
-      "year": "2023",
-      "plotSize": "1200 sq ft",
+      "year": "2019",
+      "plotSize": "5500 sq ft",
       "facing": "North",
       "propertyType": "Residential",
       "image": "https://rzkmikgqpkblsjbrmnkw.supabase.co/storage/v1/object/public/project-images/vinay/IMG_1255-1764180409328-iaxv5wu0pp.png",
@@ -65,13 +65,13 @@
       "image_alt_texts": [
         "Vinay house"
       ],
-      "description": "text here",
+      "description": "A cost friendly modern elevation featuring a clean brick texture finish designed for individual houses along with an RK unit for maximum rental yield. The layout includes private balconies for the 2 BHK units, ensuring better ventilation, comfort, and tenant appeal.",
       "specifications": {
-        "bedrooms": "4"
+        "bedrooms": "11"
       },
       "active": true,
       "created_at": "2025-11-26T18:06:53.718Z",
-      "updated_at": "2025-11-26T18:06:53.718Z"
+      "updated_at": "2025-11-30T10:00:26.147Z"
     },
     {
       "id": "cmiewvay90000l809p3iqqxse",
