--- a/package.json
+++ b/package.json
@@ -26,10 +26,10 @@
     "dompurify": "^3.2.6",
     "dotenv": "^16.5.0",
     "eslint": "^9",
-    "eslint-config-next": "15.3.3",
+    "eslint-config-next": "^15.5.7",
     "googleapis": "^150.0.1",
     "marked": "^15.0.12",
-    "next": "15.3.3",
+    "next": "^15.5.7",
     "nodemailer": "^7.0.5",
     "postcss": "^8.4.49",
     "prisma": "^6.14.0",
